# Labs_algorithms

./: .gitignore
Lab1/: .gitignore  Makefile  funcs.h  main  main.c  report.md  test.c
Lab2/: help.h  main  main.c  makefile  read.h  report.md  search.h  sort.h  test  test.c
Lab2/test_data/: test_random.txt  test_reverse.txt  test_sorted.txt
Lab3/: Makefile  main  main.c  report.md  rpn.h  rpn_to_tree.h  tree.h  validation.h
Lab3/src/: calculate_tree.h  check_priority.h  main  main.c  read_expr.h  rpn.h  stack.h
Lab3/tests/: tests  tests.c
Lab4/: Makefile  report.md  tests.cpp
Lab4/DATA/: test.txt  test_out.txt
Lab4/src/: main  main.c  read.h  tests  tests.cpp  tree.h
Lab5/: CMakeLists.txt  Makefile  report.md  tests.cpp
Lab5/DATA/: benchmark.txt
Lab5/src/: benchmark.c  dijkstra.h  main.c  make_schedule.py  matrix.h
